objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Standard lead process with marketing qualified, Sales Accepted, Sales Qualified and Rejected Statuses</description>
        <isActive>true</isActive>
        <values>
            <fullName>Marketing Qualified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Sales Accepted</fullName>
        </values>
        <values>
            <fullName>Sales Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ABCRating__c</fullName>
        <inlineHelpText>Please indicate the (potential) customer classification. A (high), B (medium), C (low) annual turnover.</inlineHelpText>
        <label>ABC Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ABCRating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AnnualRevenue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BusinessGroupClassification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group Classification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Customer)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FunctionalArea</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <label>IMCD Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB1__c</fullName>
        <label>LOB1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB2__c</fullName>
        <label>LOB2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB3__c</fullName>
        <label>LOB3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>LOB3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfEmployees__c</fullName>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NoOfEmployees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharma_Tags__c</fullName>
        <label>Pharma Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PharmaTags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Determines the region based on the Country field.</description>
        <formula>IF(ISBLANK(Country), &quot;&quot;,

            IF(CONTAINS(&quot;AD:AE:AL:AM:AO:AT:AX:AZ:BA:BE:BF:BG:BH:BI:BJ:BV:BW:BY:CD:CF:CG:CG:CH:CI:CM:CV:CY:CZ:DE:DJ:DK:DZ:EE:EG:EH:ER:ES:ET:FI:FO:FR:FR:GA:GB:GE:GF:GG:GH:GI:GL:GM:GN:GQ:GR:GW:HR:HU:IE:IL:IM:IQ:IR:IS:IT:JE:JO:KE:KG:KM:KW:KZ:LB:LI:LR:LS:LT:LU:LV:LY:MA:MC:MD:ME:MG:MK:ML:MR:MT:MU:MW:MZ:NA:NE:NG:NL:NO:OM:PK:PL:PS:PT:QA:RE:RO:RS:RU:RW:SA:SC:SD:SE:SH:SI:SJ:SK:SL:SM:SN:SO:SS:ST:SZ:TD:TG:TJ:TM:TN:TR:TZ:UA:UG:UZ:VA:YE:YT:ZA:ZM:ZW&quot;, Country), &quot;EMEA&quot;,

            IF(CONTAINS(&quot;AF:AQ:AU:AZ:BD:BH:BN:BT:CC:CK:CN:CX:CY:FJ:GE:GU:HK:HM:ID:IN:IO:JP:KG:KH:KI:KP:KR:KW:KZ:LA:LK:MH:MM:MN:MO:MP:MV:MY:NC:NF:NP:NR:NU:NZ:PF:PG:PH:PN:PW:QA:SB:SG:SY:TF:TH:TK:TL:TO:TV:TW:VN:VU:WF:WS&quot;, Country), &quot;APAC&quot;,

            IF(CONTAINS(&quot;AG:AI:AR:AW:BB:BL:BM:BO:BQ:BR:BS:BZ:CA:CL:CO:CR:CU:CW:DM:DO:EC:FK:GD:GP:GS:GT:GY:HN:HT:JM:KN:KY:LC:MF:MQ:MS:MX:NI:PA:PE:PM:PR:PY:SR:SV:SX:TC:TT:US:UY:VC:VE:VG:VI&quot;, Country), &quot;AMERICAS&quot;,

            NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Currency__c</fullName>
        <label>Revenue Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <description>Standard Record Type</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>